Backported performance tests